	* CORE: Added support for multiple JOIN statements.  Thanks to Ramps.  Feature #28.
	* CORE: Added ability to select log-type using "com.j256.ormlite.logger.type" system property.  See LoggerFactory.
	* CORE: Creating an empty foreign collection now mirrors the collection type.  "Fixes" bug #124.
	* JDBC: Improved the log class detection and added support for Slf4j nad Log4j2.  Feature #27.
	* ANDROID: Added protections around missing classes when building class config.  Thanks to Bart.  Bug #133.
	* ANDROID: Fixed unclosed Cursor in AndroidDatabaseConnection.isTableExists().  Thanks to Andreas. Bug #137.

4.42: 9/27/2012 (svn r2653)
	* CORE: Added basic INNER and LEFT JOIN capabilities for queries only.  Finally.  Work in progress.
	* CORE: Added ObjectFactory support on the DAO to better support Guice and other wiring.  Thanks to glenviewjeff.
	* CORE: Fixed a bug in comparing superclasses of the field with the field.  Thanks to glenviewjeff.  Bug #3538777.
	* CORE: Fixed problems with java.sql.Date and Timestmp persisters.  Thanks to Mohammad Moghimi.  Bug #3534395.
	* CORE: Added queryRawValue() method to the DAO for getting a single aggregate result.
	* CORE: Added last(), moveAbsolute(), and close() methods to DatabaseResults.  Thanks to Andrey.
	* CORE: Added a Dao.getConnectionSource() method to assign with the RuntimeExceptionDao.  Thanks to glenviewjeff.	
	* CORE: Added closeQuietly() methods for all close() methods in a number of classes/interfaces.
	* CORE: Added Dao.executeRawNoArgs() method for executing raw statements with no arguments.  Necessary for JDBC fix.
	* CORE: Added the ability to order your foreign collections ASC or DESC.  Thanks to Jaykob.  Feature #3571690.
	* ANDROID: Added support for auto-commit under Android using transactions.  Thanks to Chad Schultz.
	* ANDROID: Added getCount() and getPosition() cursor methods AndroidDatabaseResults.  Thanks to Andrey.